force-app/main/default/objects/Account/fields/LXD_Comentarios__c.field-meta.xml
<CustomField>
    <fullName>LXD_Comentarios__c</fullName>
    <inlineHelpText>Comentarios acerca del distribuidor</inlineHelpText>
    <label>Comentarios</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>