force-app/main/default/objects/Account/fields/LXD_Correo__c.field-meta.xml
<CustomField>
    <fullName>LXD_Correo__c</fullName>
    <inlineHelpText>Cuenta de correo del distribuidor</inlineHelpText>
    <label>Correo</label>
    <type>Email</type>
</CustomField>