force-app/main/default/objects/Account/fields/LXD_Cuenta_unica_Novavision__c.field-meta.xml
<CustomField>
    <fullName>LXD_Cuenta_unica_Novavision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta única Novavision</label>
    <type>Checkbox</type>
</CustomField>