force-app/main/default/objects/Account/fields/LXD_Cuenta_unica_SKY__c.field-meta.xml
<CustomField>
    <fullName>LXD_Cuenta_unica_SKY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta única SKY</label>
    <type>Checkbox</type>
</CustomField>