force-app/main/default/objects/Account/fields/LXD_Es_Master_SKY_Novavision__c.field-meta.xml
<CustomField>
    <fullName>LXD_Es_Master_SKY_Novavision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Master SKY Novavisión</label>
    <type>Checkbox</type>
</CustomField>