force-app/main/default/objects/Account/fields/LXD_Estatus__c.field-meta.xml
<CustomField>
    <fullName>LXD_Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activa</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Suspendido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>