force-app/main/default/objects/Account/fields/LXD_Fecha_de_alta__c.field-meta.xml
<CustomField>
    <fullName>LXD_Fecha_de_alta__c</fullName>
    <inlineHelpText>Fecha de alta del distribuidor</inlineHelpText>
    <label>Fecha de alta</label>
    <type>DateTime</type>
</CustomField>