force-app/main/default/objects/Account/fields/LXD_Fecha_de_baja__c.field-meta.xml
<CustomField>
    <fullName>LXD_Fecha_de_baja__c</fullName>
    <inlineHelpText>Fecha de baja del distribuidor</inlineHelpText>
    <label>Fecha de baja</label>
    <type>DateTime</type>
</CustomField>