force-app/main/default/objects/Account/fields/LXD_Master__c.field-meta.xml
<CustomField>
    <fullName>LXD_Master__c</fullName>
    <inlineHelpText>Master del distribuidor</inlineHelpText>
    <label>Master</label>
    <length>30</length>
    <type>Text</type>
</CustomField>