force-app/main/default/objects/Account/fields/LXD_N_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>LXD_N_Distribuidor__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Número de distribuidor</inlineHelpText>
    <label>Nº Distribuidor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>