force-app/main/default/objects/Account/fields/LXD_Nombre_comercial__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nombre_comercial__c</fullName>
    <inlineHelpText>Nombre comercial del distribuidor</inlineHelpText>
    <label>Nombre comercial</label>
    <length>40</length>
    <type>Text</type>
</CustomField>