force-app/main/default/objects/Account/fields/LXD_Nuevo_Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>LXD_Nuevo_Distribuidor__c</fullName>
    <inlineHelpText>Clave del nuevo distribuidor en caso de cambio de razón social o cambio de master</inlineHelpText>
    <label>Nuevo Distribuidor</label>
    <length>25</length>
    <type>Text</type>
</CustomField>