force-app/main/default/objects/Account/fields/LXD_Telefono_2__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_2__c</fullName>
    <inlineHelpText>Teléfono 2 del distribuidor</inlineHelpText>
    <label>Teléfono 2</label>
    <type>Phone</type>
</CustomField>