force-app/main/default/objects/Account/fields/LXD_Telefono_3__c.field-meta.xml
<CustomField>
    <fullName>LXD_Telefono_3__c</fullName>
    <inlineHelpText>Teléfono 3 del distribuidor</inlineHelpText>
    <label>Teléfono 3</label>
    <type>Phone</type>
</CustomField>