force-app/main/default/objects/Account/fields/LXD_Tipoentidad__c.field-meta.xml
<CustomField>
    <fullName>LXD_Tipoentidad__c</fullName>
    <label>Tipo de entidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Distribuidor</fullName>
            </value>
            <value>
                <fullName>Reparadores</fullName>
            </value>
            <value>
                <fullName>Instaladores externos</fullName>
            </value>
            <value>
                <fullName>Call center externo</fullName>
            </value>
            <value>
                <fullName>Despacho recuperación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>