force-app/main/default/objects/Account/fields/MX_SKY_ColoiaEnv__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_ColoiaEnv__c</fullName>
    <label>Colonia</label>
    <length>40</length>
    <type>Text</type>
</CustomField>