force-app/main/default/objects/Account/fields/MX_SKY_EntrecalIeEnvDos__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_EntrecalIeEnvDos__c</fullName>
    <label>Entre calle 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>