force-app/main/default/objects/Account/fields/MX_SKY_EntrecalleUnoEnv__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_EntrecalleUnoEnv__c</fullName>
    <label>Entre calle 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>