force-app/main/default/objects/Account/fields/MX_SKY_NumExtEnv__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_NumExtEnv__c</fullName>
    <label>Número exterior envío</label>
    <length>60</length>
    <type>Text</type>
</CustomField>