force-app/main/default/objects/Account/fields/MX_SKY_NumIntEnv__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_NumIntEnv__c</fullName>
    <label>Número interior</label>
    <length>20</length>
    <type>Text</type>
</CustomField>