force-app/main/default/objects/Account/fields/MX_SKY_NumIntFact__c.field-meta.xml
<CustomField>
    <fullName>MX_SKY_NumIntFact__c</fullName>
    <label>Número interior facturación</label>
    <length>10</length>
    <type>Text</type>
</CustomField>