force-app/main/default/objects/Account/recordTypes/LXD_Cuenta.recordType-meta.xml
<RecordType>
    <fullName>LXD_Cuenta</fullName>
    <active>true</active>
    <label>Cuenta</label>
</RecordType>