force-app/main/default/objects/Account/recordTypes/vlocity_cmt__Other.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__Other</fullName>
    <active>true</active>
    <description>Use other accounts for organizations that are not a customer.</description>
    <label>Other</label>
</RecordType>