force-app/main/default/objects/Account/validationRules/CompletarCampoMasterSiEsMasterEsTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>CompletarCampoMasterSiEsMasterEsTrue</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   OR(LXD_Cuenta_unica_SKY__c = FALSE,LXD_Cuenta_unica_Novavision__c = FALSE),
   ISBLANK( ParentId )
)</errorConditionFormula>
    <errorDisplayField>ParentId</errorDisplayField>
    <errorMessage>Es obligatorio completar el master.</errorMessage>
</ValidationRule>