force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>LXD_N_Distribuidor__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>LXD_Correo__c</columns>
    <columns>LXD_Estatus__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>LXD_Tipoentidad__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>